# Proyecto-de-Software

./: .gitignore  README.md  app.py  index.html  pyproject.toml
admin/: app.py  listado.csv  pyproject.toml  socios.csv
admin/public/css/: admin.css  admin_form.css  admin_table.css  login.css
admin/public/js/: admin_users.js  form-validation.js  socios.js
admin/src/core/: db.py
admin/src/web/: __init__.py  config.py
assets/: AboutView.adb72473.js  index.934d6891.js
portal/: index.html  package-lock.json  package.json
portal/src/: App.vue  config.js
portal/src/assets/: main.css
portal/src/components/: CardDiscipline.vue  ChartBar.vue  ChartPie.vue  Footer.vue  Navbar.vue  Spinner.vue  UploadPayment.vue
portal/src/router/: index.js
portal/src/views/: DisciplineView.vue  HomeView.vue  LoginView.vue  MeView.vue  PaymentsView.vue  StatsView.vue  index.html
src/core/: db.py
src/core/models/: Categoria.py  Disciplina.py  Permiso.py  Rol.py  Socio.py  Usuario.py  socio.py
src/web/: __init__.py
src/web/controllers/: Admin.py  Auth.py  Disciplina.py  FactoryCrud.py  PDFCreate.py  Usuario.py  pagos.py  pagos_socio.py  perAsoc.py
src/web/templates/: admin.html  admin_configuracion.html  admin_disciplinas.html  admin_disciplinas_edit.html  admin_disciplinas_new.html  admin_usuarios.html  admin_usuarios_edit.html  admin_usuarios_new.html  all_partners.html  create_payment.html  create_perAsoc.html  edit_perAsoc.html  index.html  index_perAsoc.html  list.html  login.html  (+3 more)
vue-project/: package-lock.json  package.json
vue-project/src/: App.vue
(+64 files in other folders)
