[tool.poetry]
name = "grupo21"
version = "0.1.0"
description = ""
authors = ["Camilo Di Paolo <camilodipaolo10@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.41"
PyJWT = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
